--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,14 @@ dependencies:
   equatable: ^2.0.5
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
-  qr_flutter: ^4.0.0
+  barcode_widget: ^2.0.3
   flutter_secure_storage: ^6.0.0
   url_launcher: ^6.1.7
+  searchfield: ^0.7.5
+  grouped_list: ^5.1.2
+  pdf: ^3.9.0
+  path_provider: ^2.0.13
+  open_filex: ^4.3.2
 
 
 
@@ -55,7 +60,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: ^0.12.0
 
 flutter_icons:
   android: "ic_launcher"
